More work on feature
Don't have time to write a proper commit  :(